--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -344,7 +344,7 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #18BC9C !important;
+  background-color: #3A4F72 !important;
 }
 
 .bg-secondary {
@@ -360,8 +360,8 @@ a:focus, a:hover, a:active {
 }
 
 .btn-primary {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+    background-color: #3A4F72;
+    border-color: #3A4F72;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
