--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -38,10 +38,10 @@ hr.star-light {
   border-color: #fff;
 }
 
-    hr.star-light:after {
-        color: #fff;
-        background-color: ##3A4F72;
-    }
+hr.star-light:after {
+    color: #fff;
+    background-color: #3A4F72;
+}
 
 hr.star-dark {
   border-color: #2C3E50;
@@ -115,7 +115,7 @@ section h2 {
 }
 
     #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: ##3A4F72;
+        color: #3A4F72;
     }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -123,7 +123,7 @@ section h2 {
 }
 
     #mainNav .navbar-nav li.nav-item a.nav-link.active {
-        color: ##3A4F72;
+        color: #3A4F72;
     }
 
 #mainNav .navbar-toggler {
@@ -154,7 +154,7 @@ section h2 {
   }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: #fff;
-        background: ##3A4F72;
+        background: #3A4F72;
     }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
